--- a/app/views/recipes/edit.html.erb
+++ b/app/views/recipes/edit.html.erb
@@ -36,6 +36,7 @@
 
           <div class="field">
             <%= f.label :image, "写真", class: "label" %>
+            <%= f.file_field :image %>
             <%= f.attachment_field :image, class: "input" %>
           </div>
 
