--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,27 +1,16 @@
-<section class="section">
+<section class="section main-image">
   <article class="media">
     <div class="media-content">
       <div class="content has-text-centered">
-        <p>
-          <strong class="is-size-1" style="font-family: cursive;">recipegram</strong>
-        </p>
-      </div>
-      <div class="columns is-centered">
-        <div class="column is-5">
-          <br>
-          <%= link_to "ログイン", new_user_session_path, class: "button is-warning is-fullwidth" %>
-          <br>
-          <%= link_to "新規登録", new_user_registration_path, class: "button is-warning is-fullwidth" %>
+        <p class="main-text" style="font-family: cursive;">Spice Up Your Life</p>
+        <div class="columns is-centered">
+          <div class="column is-5">
+            <%= link_to "ログイン", new_user_session_path, class: "button is-warning is-fullwidth" %>
+            <br>
+            <%= link_to "新規登録", new_user_registration_path, class: "button is-warning is-fullwidth" %>
+          </div>
         </div>
       </div>
     </div>
   </article>
-  <br>
-  <div class="columns is-centered">
-    <div class="column">
-      <figure>
-        <div class="main-image"></div>
-      </figure>
-    </div>
-  </div>
 </section>
