--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -5,9 +5,9 @@
         <p class="main-text" style="font-family: cursive;">Spice Up Your Life </p>
         <div class="columns is-centered">
           <div class="column is-5">
-            <%= link_to "ログイン", new_user_session_path, class: "button is-warning is-fullwidth" %>
+            <%= link_to "ログイン", new_user_session_path, class: "button is-warning btn_wrapper" %>
             <br>
-            <%= link_to "新規登録", new_user_registration_path, class: "button is-warning is-fullwidth" %>
+            <%= link_to "新規登録", new_user_registration_path, class: "button is-warning btn_wrapper" %>
           </div>
         </div>
       </div>
