--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -25,8 +25,7 @@
 }
 
 .main-image {
-	height: 120%;
-	width: 100%;
+	height: 1000px;
 	background-image: url(home5.jpg);
 	background-size: cover;
 	background-repeat: no-repeat;
@@ -35,5 +34,9 @@
 .main-text {
 	font-size: 100px;
 	color: white;
-	padding-top: 440px;
+	padding-top: 350px;
+}
+
+.btn_wrapper {
+	margin-bottom: 15px;
 }
