--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Recipegram</title>
+    <title>Spices-gram</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -26,7 +26,7 @@
   <nav class="navbar is-warning">
       <div class="navbar-brand">
         <%= link_to root_path, class: "navbar-item" do %>
-          <h1 class="title is-4" style="font-family: cursive;">recipegram</h1>
+          <h1 class="title is-4" style="font-family: cursive;">spices-gram</h1>
         <% end %>
         <div class="navbar-burger burger" data-target="navbarExampleTransparentExample">
           <span></span>
@@ -38,7 +38,7 @@
       <% if user_signed_in? %>
         <div id="navbarExampleTransparentExample" class="navbar-menu">
           <div class="navbar-item">
-            <%= link_to "レシピ一覧", recipes_path, class: "navbar-item button is-warning is-light" %>
+            <%= link_to "レシピ", recipes_path, class: "navbar-item button is-warning is-light" %>
           </div>
           <div class="navbar-item">
             <%= link_to "レシピ投稿", new_recipe_path, class: "navbar-item button is-warning is-light" %>
@@ -47,7 +47,7 @@
             <div class="navbar-item">
               <div class="field is-grouped">
                 <p class="control">
-                  <%= link_to "レシピグラマーー覧", users_path, class: "button is-warning is-light" %>
+                  <%= link_to "レシピグラマー", users_path, class: "button is-warning is-light" %>
                 </p>
                 <p class="control">
                   <%= link_to "マイページ", user_path(current_user), class: "button is-warning is-light" %>
@@ -62,10 +62,10 @@
       <% else %>
         <div id="navbarExampleTransparentExample" class="navbar-menu">
           <div class="navbar-item">
-            <%= link_to "レシピ一覧", recipes_path, class: "navbar-item button is-warning is-light" %>
+            <%= link_to "レシピ", recipes_path, class: "navbar-item button is-warning is-light" %>
           </div>
           <div class="navbar-item">
-            <%= link_to "レシピグラマーー覧", users_path, class: "navbar-item button is-warning is-light" %>
+            <%= link_to "レシピグラマー", users_path, class: "navbar-item button is-warning is-light" %>
           </div>
           <div class="navbar-end">
             <div class="navbar-item">
