--- a/app/views/intro/index.html.erb
+++ b/app/views/intro/index.html.erb
@@ -1,6 +1,6 @@
-<section class="info">
-  <div class="main">
-    <div class="info-text">
+<section class="main">
+  <div class="info">
+    <div class="info_text">
       <h1 class="title">
         spices
       </h1>
@@ -12,5 +12,16 @@
         たった一振りで美味しい生活が待っている。</br>
       </p>
     </div>
+    <div class="info_spices">
+      <h1>
+        spices紹介
+      </h1>
+      <ul class="indexList01 clearfix">
+      <li class="first">
+        <a href="garlic/index.html">
+        <img src="images/index garlic.jpg">
+        <span>肉や魚の臭み消す力が強く、あらゆる料理におすすめ！</span>
+      </li>
+    </ul>
   </div>
 </section>
