spice 紹介 レイアウト

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,9 +16,9 @@
 
  @import "bulma";
 
- h2 {
-	 font-size: 30px;
- }
+//  h2 {
+// 	 font-size: 100px;
+//  }
 
 .notification:not(:last-child){
 	margin-bottom: 0;
