--- a/app/views/intro/index.html.erb
+++ b/app/views/intro/index.html.erb
@@ -1,11 +1,11 @@
 <section class="main">
   <div class="img">
     <div class="info">
-      <div class="info_text">
-        <h1 class="title">
-          spices
-        </h1>
-        <p>
+      <div class="info__main">
+        <h2 class="info__title">
+          Spices up
+        </h2>
+        <p class="info__text">
           料理に『スパイスを加える』ことを英語で『Spice up』と言う。</br>
           この言葉には他に『趣を添える』と言う意味がある。</br>
           『Spice up your life』とすれば、『日々に彩りを』と言う感じ。</br>
@@ -14,39 +14,39 @@
         </p>
       </div>
       <div class="p-content" id="js-article-detail-content">
-        <h2>世界中に存在する、スパイス＆ハーブ</h2>
-        <p>スパイスの定義は、「植物である」「香りをもっている」「人の暮らしに役立っている」この３つを満たしていること。世界で使われるスパイスの種類は350~500種、ハーブの種類は万を超えるともいわれるなかから、生活に取り入れやすいスパイス＆ハーブ全30種を一挙紹介していこう。</p>
-        <p>＜スパイス＆ハーブ辞典目次＞</p>
-        <blockquote><p><a href="#spice1">エシャロット／Shallor</a><br>
-        <a href="#spice2">オールスパイス／Allspice</a><br>
-        <a href="#spice3">オレガノ／Oregano</a><br>
-        <a href="#spice4">ガーリック／Garlic</a><br>
-        <a href="#spice5">カルダモン／Cardamom</a><br>
-        <a href="#spice6">クミン／Cumin</a><br>
-        <a href="#spice7">クローブ／Clove</a><br>
-        <a href="#spice8">ホワイトペッパー／White Pepper</a><br>
-        <a href="#spice9">ブラックペッパー ／Black Pepper</a><br>
-        <a href="#spice10">コリアンダー／Coriander</a><br>
-        <a href="#spice11">サフラン／Saffron</a><br>
-        <a href="#spice12">山椒／Japanese pepper</a><br>
-        <a href="#spice13">シナモン／Cinnamon</a><br>
-        <a href="#spice14">ジンジャー ／Ginger</a><br>
-        <a href="#spice15">スターアニス／Star anise</a><br>
-        <a href="#spice16">セロリーシード／Celery seed</a><br>
-        <a href="#spice17">ターメリック／Turmeric</a><br>
-        <a href="#spice18">タイム／Thyme</a><br>
-        <a href="#spice19">チリーペッパー／Chilli pepper</a><br>
-        <a href="#spice20">ナツメッグ／Nurmeg</a><br>
-        <a href="#spice21">バジル／Basil</a><br>
-        <a href="#spice22">パプリカ／Paprika</a><br>
-        <a href="#spice23">フェネグリーク／Fenugreek</a><br>
-        <a href="#spice24">フェンネル／Fennel</a><br>
-        <a href="#spice25">花椒（ホアジャオ)／Chinese pepper</a><br>
-        <a href="#spice26">マスタード／Mustard</a><br>
-        <a href="#spice27">ゆず／Yuzu</a><br>
-        <a href="#spice28">ローレル／Laurel</a><br>
-        <a href="#spice29">ロングペッパー／Long pepper</a><br>
-        <a href="#spice30">わさび／Wasabi</a></p></blockquote>
+        <h3 class="info_sub__title">世界中に存在する、スパイス＆ハーブ</h3>
+        <p class="info_sub__text">スパイスの定義は、「植物である」「香りをもっている」「人の暮らしに役立っている」この３つを満たしていること。世界で使われるスパイスの種類は350~500種、ハーブの種類は万を超えるともいわれるなかから、生活に取り入れやすいスパイス＆ハーブ全30種を一挙紹介していこう。</p>
+        <p class="info_sub__title">＜スパイス＆ハーブ辞典目次＞</p>
+        <blockquote><p><a class="spice_title" href="#spice1">エシャロット／Shallor</a><br>
+        <a class="spice_title" href="#spice2">オールスパイス／Allspice</a><br>
+        <a class="spice_title" href="#spice3">オレガノ／Oregano</a><br>
+        <a class="spice_title" href="#spice4">ガーリック／Garlic</a><br>
+        <a class="spice_title" href="#spice5">カルダモン／Cardamom</a><br>
+        <a class="spice_title" href="#spice6">クミン／Cumin</a><br>
+        <a class="spice_title" href="#spice7">クローブ／Clove</a><br>
+        <a class="spice_title" href="#spice8">ホワイトペッパー／White Pepper</a><br>
+        <a class="spice_title" href="#spice9">ブラックペッパー ／Black Pepper</a><br>
+        <a class="spice_title" href="#spice10">コリアンダー／Coriander</a><br>
+        <a class="spice_title" href="#spice11">サフラン／Saffron</a><br>
+        <a class="spice_title" href="#spice12">山椒／Japanese pepper</a><br>
+        <a class="spice_title" href="#spice13">シナモン／Cinnamon</a><br>
+        <a class="spice_title" href="#spice14">ジンジャー ／Ginger</a><br>
+        <a class="spice_title" href="#spice15">スターアニス／Star anise</a><br>
+        <a class="spice_title" href="#spice16">セロリーシード／Celery seed</a><br>
+        <a class="spice_title" href="#spice17">ターメリック／Turmeric</a><br>
+        <a class="spice_title" href="#spice18">タイム／Thyme</a><br>
+        <a class="spice_title" href="#spice19">チリーペッパー／Chilli pepper</a><br>
+        <a class="spice_title" href="#spice20">ナツメッグ／Nurmeg</a><br>
+        <a class="spice_title" href="#spice21">バジル／Basil</a><br>
+        <a class="spice_title" href="#spice22">パプリカ／Paprika</a><br>
+        <a class="spice_title" href="#spice23">フェネグリーク／Fenugreek</a><br>
+        <a class="spice_title" href="#spice24">フェンネル／Fennel</a><br>
+        <a class="spice_title" href="#spice25">花椒（ホアジャオ)／Chinese pepper</a><br>
+        <a class="spice_title" href="#spice26">マスタード／Mustard</a><br>
+        <a class="spice_title" href="#spice27">ゆず／Yuzu</a><br>
+        <a class="spice_title" href="#spice28">ローレル／Laurel</a><br>
+        <a class="spice_title" href="#spice29">ロングペッパー／Long pepper</a><br>
+        <a class="spice_title" href="#spice30">わさび／Wasabi</a></p></blockquote>
 
         <h2 id="spice1"><span style="color: #ffffff;">|</span></h2>
         <p><img class="aligncenter size-full wp-image-26873" src="https://harumari.tokyo/wp-content/uploads/2019/10/00135Shallot_2.jpg" alt="" width="1080" height="720" srcset="https://harumari.tokyo/wp-content/uploads/2019/10/00135Shallot_2.jpg 1080w, https://harumari.tokyo/wp-content/uploads/2019/10/00135Shallot_2-150x100.jpg 150w, https://harumari.tokyo/wp-content/uploads/2019/10/00135Shallot_2-300x200.jpg 300w, https://harumari.tokyo/wp-content/uploads/2019/10/00135Shallot_2-768x512.jpg 768w, https://harumari.tokyo/wp-content/uploads/2019/10/00135Shallot_2-1024x683.jpg 1024w" sizes="(max-width: 1080px) 100vw, 1080px" style="width: 759px;"></p>
@@ -324,8 +324,6 @@
         別名：日本わさび、本わさび<br>
         特徴：鼻にツーンと抜ける辛みをもつ。細かくおろすとより辛みが引き出される。辛みの主成分アリル辛子油は、揮発性のため、加熱により辛みが飛びやすいという性質がある。</p>
         <p>&nbsp;</>
-        <p><a href="https://line.me/R/ti/p/%40zho1451n"><img class="aligncenter wp-image-19148 size-medium is-hide" src="https://harumari.tokyo/wp-content/uploads/2018/11/29d1e6288c84c1c19715ee6c8efd48f8-300x78.jpg" alt="" width="300" height="78" srcset="https://harumari.tokyo/wp-content/uploads/2018/11/29d1e6288c84c1c19715ee6c8efd48f8-300x78.jpg 300w, https://harumari.tokyo/wp-content/uploads/2018/11/29d1e6288c84c1c19715ee6c8efd48f8-150x39.jpg 150w, https://harumari.tokyo/wp-content/uploads/2018/11/29d1e6288c84c1c19715ee6c8efd48f8.jpg 696w" sizes="(max-width: 300px) 100vw, 300px" style="width: 316.252px;"></a></p>
-        <p><span style="color: #99ccff;">※2019年10月21日 情報を更新いたしました。</span></p>
       </div>
     </div>
   </div>
