--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -62,6 +62,9 @@
       <% else %>
         <div id="navbarExampleTransparentExample" class="navbar-menu">
           <div class="navbar-item">
+            <%= link_to "スパイス紹介", intro_path, class: "navbar-item button is-warning is-light" %>
+          </div>
+          <div class="navbar-item">
             <%= link_to "レシピ", recipes_path, class: "navbar-item button is-warning is-light" %>
           </div>
           <div class="navbar-item">
