--- a/app/views/intro/index.html.erb
+++ b/app/views/intro/index.html.erb
@@ -62,7 +62,8 @@
         <p>科名：フトモモ科<br>
         利用部位：果実<br>
         別名：ジャマイカンペッパー、ピメント、三香子（さんこうし）、百味（ひゃくみ）こしょう<br>
-        特徴：シナモン、クローブ、ナツメッグをミックスしたような香り。スペインの探検家フランシスコ・フェルナンデスが1570年代にメキシコで発見したことにより世界に広まった。</p>
+        特徴：シナモン、クローブ、ナツメッグをミックスしたような香り。スペインの探検家フランシスコ・フェルナンデスが1570年代にメキシコで発見したことにより世界に広まった。<br>
+        料理：カレー</p>
 
         <h2 id="spice3"><span style="color: #ffffff;">|</span></h2>
         <h2><img class="aligncenter size-full wp-image-26875" src="https://harumari.tokyo/wp-content/uploads/2019/10/00053Oregano_3.jpg" alt="" width="1080" height="720" srcset="https://harumari.tokyo/wp-content/uploads/2019/10/00053Oregano_3.jpg 1080w, https://harumari.tokyo/wp-content/uploads/2019/10/00053Oregano_3-150x100.jpg 150w, https://harumari.tokyo/wp-content/uploads/2019/10/00053Oregano_3-300x200.jpg 300w, https://harumari.tokyo/wp-content/uploads/2019/10/00053Oregano_3-768x512.jpg 768w, https://harumari.tokyo/wp-content/uploads/2019/10/00053Oregano_3-1024x683.jpg 1024w" sizes="(max-width: 1080px) 100vw, 1080px" style="width: 759px;"><br>
