spice オレガノ  詳細

--- a/app/views/intro/index.html.erb
+++ b/app/views/intro/index.html.erb
@@ -72,7 +72,8 @@
         原産地：地中海沿岸<br>
         利用部位：葉、花穂<br>
         別名：ワイルドマジョラム、花薄荷(はなはっか)、オリガナム<br>
-        特設：清涼感のある香り。肉や魚などの臭み消しにも重宝される。ローマ時代の美食家アピシウスが、「おいしいソースには欠かせないスパイス」と言って愛した香り。</p>
+        特設：清涼感のある香り。肉や魚などの臭み消しにも重宝される。ローマ時代の美食家アピシウスが、「おいしいソースには欠かせないスパイス」と言って愛した香り。<br>
+        料理:カレー</p>
 
         <h2 id="spice4"><span style="color: #ffffff;">|</span></h2>
         <p><img class="aligncenter size-full wp-image-26876" src="https://harumari.tokyo/wp-content/uploads/2019/10/00006Garlic_2.jpg" alt="" width="1080" height="720" srcset="https://harumari.tokyo/wp-content/uploads/2019/10/00006Garlic_2.jpg 1080w, https://harumari.tokyo/wp-content/uploads/2019/10/00006Garlic_2-150x100.jpg 150w, https://harumari.tokyo/wp-content/uploads/2019/10/00006Garlic_2-300x200.jpg 300w, https://harumari.tokyo/wp-content/uploads/2019/10/00006Garlic_2-768x512.jpg 768w, https://harumari.tokyo/wp-content/uploads/2019/10/00006Garlic_2-1024x683.jpg 1024w" sizes="(max-width: 1080px) 100vw, 1080px" style="width: 759px;"></p>
