add spice column

--- a/app/views/intro/index.html.erb
+++ b/app/views/intro/index.html.erb
@@ -6,11 +6,11 @@
           Spices up
         </h2>
         <p class="info__text">
-          料理に『スパイスを加える』ことを英語で『Spice up』と言う。</br>
-          この言葉には他に『趣を添える』と言う意味がある。</br>
-          『Spice up your life』とすれば、『日々に彩りを』と言う感じ。</br>
-          スパイスには魔法の杖ような魅力があるのだ。</br>
-          たった一振りで美味しい生活が待っている。</br>
+          料理に『スパイスを加える』ことを英語で『Spice up』と言う。<br>
+          この言葉には他に『趣を添える』と言う意味がある。<br>
+          『Spice up your life』とすれば、『日々に彩りを』と言う感じ。<br>
+          スパイスには魔法の杖ような魅力があるのだ。<br>
+          たった一振りで美味しい生活が待っている。<br>
         </p>
       </div>
       <div class="p-content" id="js-article-detail-content">
