--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -34,9 +34,20 @@
                   <div class="title"><%=link_to recipe.user.username, user_path(recipe.user) %></div>
                 </div>
               </div>
-
               <div class="content">
                 <time><%= recipe.updated_at.strftime("%Y-%m-%d %H:%M") %></time>更新
+              </div>
+              <div>
+                <% if current_user.already_favorited?(recipe) %>
+                  <%= link_to recipe_favorites_path(recipe), method: :delete do %>
+                    <i class="fas fa-heart"></i>
+                  <% end %>
+                <% else %>
+                  <%= link_to recipe_favorites_path(recipe), method: :post do %>
+                    <i class="far fa-heart"></i>
+                    <% end %>
+                <% end %>
+                <%= recipe.favorites.count %>
               </div>
             </div>
           </div>
