--- a/app/views/recipes/edit.html.erb
+++ b/app/views/recipes/edit.html.erb
@@ -30,6 +30,11 @@
           </div>
 
           <div class="field">
+            <%= f.label :spice, "spice,材料", class: "label" %>
+            <%= f.text_area :spice, class: "textarea" %>
+          </div>
+
+          <div class="field">
             <%= f.label :body, "作り方", class: "label" %>
             <%= f.text_area :body, class: "textarea" %>
           </div>
