--- a/app/assets/stylesheets/recipes.scss
+++ b/app/assets/stylesheets/recipes.scss
@@ -1,3 +1,11 @@
 // Place all the styles related to the recipes controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+
+.recipe {
+  display: flex;
+  &__inner { width: 100% }
+}
+
+.space { margin-left: 15px; }
