--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -8,6 +8,20 @@
   </div>
 </section>
 
+<div class="container">
+  <div class="row">
+    <div class="col-4">
+      <figure class="image is-128x128"  style="margin-left: auto; margin-right: auto;">
+              <%= attachment_image_tag @user, :profile_image, fallback: "no-image.jpg", class: "profile_image is-rounded" %>
+            </figure>
+    </div>
+    <div class="col-8 text-left">
+      <h1><%= @recipe.user.username %></h1>
+      <%
+    </div>
+  </div>
+</div>
+
 <section class="section">
   <div class="container">
     <div class="columns is-centered">
@@ -79,24 +93,6 @@
         </div>
       </div>
 
-      <div class="column is-4">
-        <article class="panel is-link">
-          <p class="panel-heading">
-            By <%= @recipe.user.username %>
-          </p>
-          <div class="panel-block">
-            <p class="control">
-              <%= @recipe.user.profile %>
-            </p>
-          </div>
-          <%= link_to user_path(@recipe.user), class: "panel-block" do %>
-            <span class="panel-icon">
-              <i class="fas fa-user" aria-hidden="true"></i>
-            </span>
-            <%= @recipe.user.username %> さんのページへ
-          <% end %>
-        </article>
-      </div>
     </div>
   </div>
 </section>
