--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -8,19 +8,49 @@
   </div>
 </section>
 
-<div class="container">
-  <div class="row">
-    <div class="col-4">
-      <figure class="image is-128x128"  style="margin-left: auto; margin-right: auto;">
+<section class="section">
+  <div class="container">
+    <div class="columns is-centered">
+      <div class="column is-8">
+        <div class="columns is-centered">
+          <div class="column is-4">
+            <figure class="image is-128x128"  style="margin-left: auto; margin-right: auto;">
               <%= attachment_image_tag @user, :profile_image, fallback: "no-image.jpg", class: "profile_image is-rounded" %>
             </figure>
-    </div>
-    <div class="col-8 text-left">
-      <h1><%= @recipe.user.username %></h1>
-      <%
+          </div>
+          <div class="column is-8">
+            <table class="table is-fullwidth">
+              <tr>
+                <td class="is-size-4">
+                  <strong><%= @user.username %></strong>
+                </td>
+                <td class="is-size-4">
+                  <%= @user.email %>
+                </td>
+                <td class="is-size-4">
+                  <i class="far fa-sticky-note"></i> : <%= @user.recipes.count %>
+                </td>
+                
+                <% if @user.id == current_user.id %>
+                <td>
+                    <%= link_to "編集", edit_user_path(@user), class: "button is-primary" %>
+                </td>
+                <% end %>
+              </tr>
+            </table>
+            <table class="table is-fullwidth">
+              <tr>
+                <td>
+                  <%= @user.profile %>
+                </td>
+              </tr>
+            </table>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
-</div>
+</section>
 
 <section class="section">
   <div class="container">
