--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -24,12 +24,15 @@
                 <td class="is-size-4">
                   <strong><%= @user.username %></strong>
                 </td>
-                <% if @user.id == current_user.id %>
                 <td class="is-size-4">
                   <%= @user.email %>
                 </td>
+                <td class="is-size-4">
+                  <i class="far fa-sticky-note"></i> : <%= @user.recipes.count %>
+                </td>
                 <td>
-                    <%= link_to "編集", edit_user_path(@user), class: "button is-primary" %>
+                <% if @user.id == current_user.id %>
+                  <%= link_to "編集", edit_user_path(@user), class: "button is-primary" %>
                 </td>
                 <% end %>
               </tr>
