--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,9 +16,18 @@
 
  @import "bulma";
 
-//  h2 {
-// 	 font-size: 100px;
-//  }
+.hero-body {
+	height: 100px;
+	padding: 2rem 1.5rem;
+}
+
+section {
+	background-image: url(illust.jpg);
+	background-color:rgba(255,255,255,0.9);
+	background-blend-mode:lighten;
+}
+
+
 
 .notification:not(:last-child){
 	margin-bottom: 0;
