--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,13 +1,3 @@
-<section class="hero is-success">
-  <div class="hero-body">
-    <div class="container">
-      <h1 class="title">
-        マイページ
-      </h1>
-    </div>
-  </div>
-</section>
-
 <section class="section">
   <div class="container">
     <div class="columns is-centered">
@@ -19,31 +9,32 @@
             </figure>
           </div>
           <div class="column is-8">
-            <table class="table is-fullwidth">
-              <tr>
-                <td class="is-size-4">
-                  <strong><%= @user.username %></strong>
-                </td>
-                <td class="is-size-4">
-                  <%= @user.email %>
-                </td>
-                <td class="is-size-4">
-                  <i class="far fa-sticky-note"></i> : <%= @user.recipes.count %>
-                </td>
-                <td>
-                <% if @user.id == current_user.id %>
-                  <%= link_to "編集", edit_user_path(@user), class: "button is-primary" %>
-                </td>
-                <% end %>
-              </tr>
-            </table>
-            <table class="table is-fullwidth">
-              <tr>
-                <td>
-                  <%= @user.profile %>
-                </td>
-              </tr>
-            </table>
+            <table>
+              <table class="table is-fullwidth">
+                <tr>
+                  <td class="is-size-4">
+                    <strong><%= @user.username %></strong>
+                  </td>
+                  <td class="is-size-4">
+                    <%= @user.email %>
+                  </td>
+                  <td class="is-size-4">
+                    <i class="far fa-sticky-note"></i> : <%= @user.recipes.count %>
+                  </td>
+                  <td>
+                  <% if @user.id == current_user.id %>
+                    <%= link_to "編集", edit_user_path(@user), class: "button is-primary" %>
+                  </td>
+                  <% end %>
+                </tr>
+              </table>
+              <table class="table is-fullwidth">
+                <tr>
+                  <td>
+                    <%= @user.profile %>
+                  </td>
+                </tr>
+              </table>
           </div>
         </div>
       </div>
