--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,9 +3,9 @@
     <div class="columns is-centered">
       <div class="column is-8">
         <div class="columns is-centered">
-          <div class="column is-4">
-            <figure class="image is-128x128"  style="margin-left: auto; margin-right: auto;">
-              <%= attachment_image_tag @user, :profile_image, fallback: "no-image.jpg", class: "profile_image is-rounded" %>
+          <div class="column is-3">
+            <figure class="image is-130x130">
+              <%= attachment_image_tag @user, :profile_image, fallback: "no-image.jpg", class: "profile_image" %>
             </figure>
           </div>
           <div class="column is-8">
@@ -19,7 +19,7 @@
                     <%= @user.email %>
                   </td>
                   <td class="is-size-4">
-                    <i class="far fa-sticky-note"></i> : <%= @user.recipes.count %>
+                    <i class="fas fa-book" aria-hidden="true"></i> : <%= @user.recipes.count %>
                   </td>
                   <td>
                   <% if @user.id == current_user.id %>
