--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,6 +21,10 @@
 	padding: 2rem 1.5rem;
 }
 
+.background-size {
+	height: 100vh;
+}
+
 section {
 	background-image: url(illust.jpg);
 	background-color:rgba(255,255,255,0.9);
