--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,4 @@
-<section class="section main-image">
+<div class="section main-image">
   <article class="media">
     <div class="media-content">
       <div class="content has-text-centered">
@@ -13,4 +13,4 @@
       </div>
     </div>
   </article>
-</section>
+</div>
