--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,15 +1,4 @@
-<section class="hero is-info">
-  <div class="hero-body">
-    <div class="container">
-      <h1 class="title">
-        新規登録画面
-      </h1>
-    </div>
-  </div>
-</section>
-
-
-<section class="section">
+<section class="section background-size">
   <div class="container">
     <div class="columns is-centered">
       <div class="column is-5">
