--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,4 @@
-<section class="section">
+<section class="section background-size">
   <div class="container">
     <div class="columns is-multiline">
       <% @users.each do |user| %>
