--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,4 +1,4 @@
-<section class="section background-size">
+<section class="section">
   <div class="container">
     <div class="columns is-multiline">
       <% @recipes.each do |recipe| %>
