--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -100,15 +100,21 @@
                   <td><%= simple_format @recipe.body %></td>
                 </tr>
               </table>
-              <% if @recipe.user.id == current_user.id %>
+              <%
+=begin%>
+ <% if @recipe.user.id == current_user.id %>
                 <%= link_to "編集画面へ", edit_recipe_path(@recipe), class: "button is-success" %>
-              <% end %>
+              <% end %> 
+<%
+=end%>
 
-              <%= form_for [@recipe, @comment] do |f| %>
-                <%= f.text_field :content %>
-                <br>
-                <%= f.submit 'コメントする' %>
-              <% end %>
+              <div class="comment-box">
+                <%= form_for [@recipe, @comment] do |f| %>
+                  <%= f.hidden_field :content %>
+                  <%= f.text_field :content, placeholder: "コメントする" %>
+                  <%= f.submit "投稿", class: "btn btn-succes float-right" %>
+                <% end %>
+              </div>
             </div>
           </div>
         </div>
@@ -117,3 +123,4 @@
     </div>
   </div>
 </section>
+
