--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -2,41 +2,43 @@
   <div class="container">
     <div class="columns is-centered">
       <div class="column is-8">
-        <div class="columns is-centered">
-          <div class="column is-4">
-            <figure class="image is-128x128"  style="margin-left: auto; margin-right: auto;">
-              <%= attachment_image_tag @user, :profile_image, fallback: "no-image.jpg", class: "profile_image is-rounded" %>
-            </figure>
+        <% @users.each do |user| %>
+          <div class="columns is-centered">
+            <div class="column is-4">
+              <figure class="image is-128x128"  style="margin-left: auto; margin-right: auto;">
+                <%= attachment_image_tag @user, :profile_image, fallback: "no-image.jpg", class: "profile_image is-rounded" %>
+              </figure>
+            </div>
+            <div class="column is-8">
+              <table class="table is-fullwidth">
+                <tr>
+                  <td class="is-size-4">
+                    <strong><%= @user.username %></strong>
+                  </td>
+                  <td class="is-size-4">
+                    <%= @user.email %>
+                  </td>
+                  <td class="is-size-4">
+                    <i class="fas fa-book"></i> : <%= @user.recipes.count %>
+                  </td>
+                  
+                  <% if @user.id == current_user.id %>
+                  <td>
+                      <%= link_to "編集", edit_user_path(@user), class: "button is-primary" %>
+                  </td>
+                  <% end %>
+                </tr>
+              </table>
+              <table class="table is-fullwidth">
+                <tr>
+                  <td>
+                    <%= @user.profile %>
+                  </td>
+                </tr>
+              </table>
+            </div>
           </div>
-          <div class="column is-8">
-            <table class="table is-fullwidth">
-              <tr>
-                <td class="is-size-4">
-                  <strong><%= @user.username %></strong>
-                </td>
-                <td class="is-size-4">
-                  <%= @user.email %>
-                </td>
-                <td class="is-size-4">
-                  <i class="fas fa-book"></i> : <%= @user.recipes.count %>
-                </td>
-                
-                <% if @user.id == current_user.id %>
-                <td>
-                    <%= link_to "編集", edit_user_path(@user), class: "button is-primary" %>
-                </td>
-                <% end %>
-              </tr>
-            </table>
-            <table class="table is-fullwidth">
-              <tr>
-                <td>
-                  <%= @user.profile %>
-                </td>
-              </tr>
-            </table>
-          </div>
-        </div>
+        <% end %>
       </div>
     </div>
   </div>
