--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -62,20 +62,20 @@
                     <span class="panel-icon">
                       <i class="fas fa-book" aria-hidden="true"></i>
                     </span>
-                    このレシピを見る
+                    レシピ詳細
                   <% end %>
                   <% if @user.id == current_user.id %>
                     <%= link_to edit_recipe_path(recipe), class: "panel-block" do %>
                       <span class="panel-icon">
                         <i class="fas fa-edit"></i>
                       </span>
-                      このレシピを編集する
+                      レシピ編集
                     <% end %>
                     <%= link_to recipe_path(recipe), method: :delete, data: {confirm: "削除しますか？"}, class: "panel-block" do %>
                       <span class="panel-icon">
                         <i class="fas fa-trash"></i>
                       </span>
-                      このレシピを削除する
+                      レシピ削除
                     <% end %>
                   <% end %>
                 </div>
