--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -37,7 +37,6 @@
               </table>
             </div>
           </div>
-        <% end %>
       </div>
     </div>
   </div>
@@ -101,19 +100,14 @@
                   <td><%= simple_format @recipe.body %></td>
                 </tr>
               </table>
-              <%
-=begin%>
- <% if @recipe.user.id == current_user.id %>
-                <%= link_to "編集画面へ", edit_recipe_path(@recipe), class: "button is-success" %>
-              <% end %> 
-<%
-=end%>
+
+              <%= render "recipes/comments" %>
 
               <div class="comment-box">
                 <%= form_for @comment do |f| %>
-                  <%= f.hidden_field :recipe_id, value: recipe.id %>
+                  <%= f.hidden_field :@recipe_id, value: @recipe.id %>
                   <%= f.text_field :comment, placeholder: "コメントする" %>
-                  <%= f.submit "投稿", class: "btn btn-succes float-right" %>
+                  <%= f.submit "投稿", class: "button is-warning btn_wrapper" %>
                 <% end %>
               </div>
             </div>
