--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -94,7 +94,7 @@
             <div class="content">
               <table class="table is-narrow">
                 <tr>
-                  <th>レシピ  </th>
+                  <th>レシピ</th>
                 </tr>
                 <tr>
                   <td><%= simple_format @recipe.body %></td>
@@ -103,11 +103,15 @@
 
               <%= render "recipes/comments" %>
 
-              <div class="comment-box">
+              <div class="comment-box row">
                 <%= form_for @comment do |f| %>
                   <%= f.hidden_field :@recipe_id, value: @recipe.id %>
-                  <%= f.text_field :comment, placeholder: "コメントする" %>
-                  <%= f.submit "投稿", class: "button is-warning btn_wrapper" %>
+                  <div class="col-md-6">
+                    <%= f.text_field :comment, placeholder: "コメントする" %>
+                  </div>
+                  <div class="col-md-6">
+                    <%= f.submit "投稿", class: "button is-warning btn_wrapper" %>
+                  </div>
                 <% end %>
               </div>
             </div>
