hamburger menu js css

--- a/app/assets/stylesheets/recipes.scss
+++ b/app/assets/stylesheets/recipes.scss
@@ -9,3 +9,12 @@
 }
 
 .space { margin-left: 15px; }
+
+#prop-details {
+  height: 100px;
+  overflow: hidden;
+
+  &.open {
+    height: auto;
+  }
+}
