--- a/app/assets/stylesheets/intro.scss
+++ b/app/assets/stylesheets/intro.scss
@@ -2,11 +2,9 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
 
-
 .main {
   position: relative;
 }
-
 .img {
   background-image: url(home2.jpg);
   height: 2420vh;
@@ -19,7 +17,7 @@
   float: right;
   width: 900px;
   padding-left: 100px;
-  
+
   &__main {
     padding: 150px 0;
   }
@@ -27,7 +25,7 @@
   &__title {
     font-size: 100px;
     font-family: cursive;
-    color : black;
+    color: black;
     padding-bottom: 50px;
   }
 
@@ -38,15 +36,13 @@
 
 .info_sub {
   &__title {
-  font-size: 29px;
-  padding-top: 100px;
+    font-size: 29px;
+    padding-top: 100px;
   }
   &__text {
     padding-top: 30px;
   }
 }
-
-
 
 .indexList01 {
   position: relative;
@@ -54,7 +50,7 @@
   background-image: url(pin.png);
   background-position: 0 0;
   background-repeat: no-repeat;
-  background-size: contain; 
+  background-size: contain;
   width: 300px;
   height: 287px;
   line-height: 1.4;
@@ -62,7 +58,7 @@
 
 .first {
   background-image: url(garlic.jpg);
-  background-size: contain; 
+  background-size: contain;
   background-repeat: no-repeat;
   width: 212px;
   height: 287px;
@@ -70,16 +66,16 @@
 }
 
 .indexList01 li span {
-    display: block;
-    position: absolute;
-    top: 150px;
-    left: 10px;
-    width: 200px;
-    font-size: 15px;
-    font-size: 1.00rem;
+  display: block;
+  position: absolute;
+  top: 150px;
+  left: 10px;
+  width: 200px;
+  font-size: 15px;
+  font-size: 1rem;
 }
 
-.p-content{
+.p-content {
   padding: 0 300px 0 0;
 }
 
@@ -93,4 +89,205 @@
   font-size: 1.02489vw;
   line-height: 2;
   padding: 1.75695vw 2.19619vw;
+}
+
+// ========992~1199 レイアウト============//
+@media screen and (min-width: 992px) and (max-width: 1199px) {
+  .img {
+    height: 2640vh;
+  }
+
+  .info {
+    padding-left: 250px;
+    &__main {
+      padding: 100px 0;
+    }
+  }
+
+  .p-content {
+    padding: 0 200px 0 0;
+  }
+
+  .spice_title {
+    font-size: 15px;
+  }
+}
+
+// ========991~851 レイアウト============//
+@media screen and (min-width: 851px) and (max-width: 991px) {
+  .img {
+    height: 2600vh;
+  }
+
+  .info {
+    padding-left: 330px;
+    &__main {
+      padding: 150px 0;
+    }
+  }
+
+  .p-content {
+    padding: 0 100px 0 0;
+  }
+}
+
+// ========850~756 レイアウト============//
+@media screen and (min-width: 756px) and (max-width: 850px) {
+  .img {
+    height: 2620vh;
+  }
+
+  .info {
+    padding-left: 400px;
+  }
+}
+
+// ========755~656 レイアウト============//
+@media screen and (min-width: 656px) and (max-width: 755px) {
+  .img {
+    height: 2550vh;
+  }
+
+  .info {
+    width: 777px;
+    padding-left: 300px;
+
+    &__title {
+      font-size: 80px;
+      padding-bottom: 50px;
+    }
+
+    &__main {
+      padding: 100px 0;
+    }
+  }
+
+  .p-content {
+    padding: 0 30px 0 0;
+  }
+}
+
+// ========655~556 レイアウト============//
+@media screen and (min-width: 556px) and (max-width: 655px) {
+  .img {
+    height: 2680vh;
+    background-attachment: fixed;
+    background-size: auto;
+    background-position: center;
+  }
+
+  .info {
+    width: 777px;
+    padding-left: 250px;
+    padding-right: 50px;
+  }
+
+  .p-content {
+    padding: 0 10px 0 0;
+  }
+}
+
+// ========555~456 レイアウト============//
+@media screen and (min-width: 456px) and (max-width: 555px) {
+  .img {
+    height: 2640vh;
+    background-attachment: fixed;
+    background-size: auto;
+    background-position: center;
+  }
+
+  .info {
+    width: 777px;
+    padding-left: 300px;
+    padding-right: 22px;
+
+    &__title {
+      font-size: 80px;
+      padding-bottom: 50px;
+    }
+
+    &__main {
+      padding: 100px 0;
+    }
+    &__text {
+      font-size: 18px;
+    }
+  }
+
+  .p-content {
+    padding: 0 10px 0 0;
+  }
+
+  .spice_title {
+    font-size: 15px;
+  }
+}
+
+// ========455~356 レイアウト============//
+@media screen and (min-width: 356px) and (max-width: 455px) {
+  .img {
+    height: 2680vh;
+    background-attachment: fixed;
+    background-size: auto;
+    background-position: center;
+  }
+
+  .info {
+    width: 777px;
+    padding-left: 450px;
+
+    &__title {
+      font-size: 60px;
+      padding-bottom: 50px;
+    }
+
+    &__main {
+      padding: 100px 0;
+    }
+    &__text {
+      font-size: 18px;
+    }
+  }
+
+  .p-content {
+    padding: 0 10px 0 0;
+  }
+
+  .spice_title {
+    font-size: 15px;
+  }
+}
+
+// ========455~356 レイアウト============//
+@media screen and (min-width: 356px) and (max-width: 455px) {
+  .img {
+    height: 2680vh;
+    background-attachment: fixed;
+    background-size: auto;
+    background-position: center;
+  }
+
+  .info {
+    width: 777px;
+
+    &__title {
+      font-size: 60px;
+      padding-bottom: 50px;
+    }
+
+    &__main {
+      padding: 100px 0;
+    }
+    &__text {
+      font-size: 18px;
+    }
+  }
+
+  .p-content {
+    padding: 0 10px 0 0;
+  }
+
+  .spice_title {
+    font-size: 15px;
+  }
 }
